# LabCourse_Template

./: .gitignore  CMakeLists.txt  README.md
include/labcourse/: dummy.hpp
src/: main.cpp
src/labcourse/: dummy.cpp
test/: CMakeLists.txt  gtest_main.cpp  test.cpp
